Removed silly animation

--- a/_deploy/index.html
+++ b/_deploy/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/animate.css">
 		<link rel="alternate" type="application/rss+xml" title="Arachnid Labs" href="http://www.arachnidlabs.com/atom.xml" />
 	
-		<link rel="icon" type="image/png" href="/img/fav.png">
+		<link rel="icon" type="image/png" href="/favicon.png">
 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 		<script type="text/javascript" src="/js/jquery.sticky.js"></script>
@@ -243,7 +243,7 @@
 <div class="posts">
 	
 
-	<div onclick="window.location.href='/blog/2015/03/16/tsunami-signal-generator-up-on-kickstarter/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2015/03/16/tsunami-signal-generator-up-on-kickstarter/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>16</p><p class='bottom-date'>Mar 2015</p>
 	   	</div>
@@ -272,7 +272,7 @@ just 21 days to get there. If it sounds like the sort of thing you’d find usef
 
 	
 
-	<div onclick="window.location.href='/blog/2014/11/24/re-load-pro-fan-kit-now-available-for-preorder/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2014/11/24/re-load-pro-fan-kit-now-available-for-preorder/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>24</p><p class='bottom-date'>Nov 2014</p>
 	   	</div>
@@ -313,7 +313,7 @@ just 21 days to get there. If it sounds like the sort of thing you’d find usef
 
 	
 
-	<div onclick="window.location.href='/blog/2014/11/14/see-us-at-elephant-and-castle-mini-maker-faire/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2014/11/14/see-us-at-elephant-and-castle-mini-maker-faire/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>14</p><p class='bottom-date'>Nov 2014</p>
 	   	</div>
@@ -332,7 +332,7 @@ just 21 days to get there. If it sounds like the sort of thing you’d find usef
 
 	
 
-	<div onclick="window.location.href='/blog/2014/10/02/reload-pro-in-stock-and-shipping/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2014/10/02/reload-pro-in-stock-and-shipping/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>2</p><p class='bottom-date'>Oct 2014</p>
 	   	</div>
@@ -357,7 +357,7 @@ two locations!</p>
 
 	
 
-	<div onclick="window.location.href='/blog/2014/09/06/introducing-arachnid-labs-new/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2014/09/06/introducing-arachnid-labs-new/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>6</p><p class='bottom-date'>Sep 2014</p>
 	   	</div>
@@ -414,7 +414,7 @@ soon; it’s in production right now.</p>
 
 	
 
-	<div onclick="window.location.href='/blog/2014/06/17/re-load-pro-status-update/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2014/06/17/re-load-pro-status-update/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>17</p><p class='bottom-date'>Jun 2014</p>
 	   	</div>
@@ -445,7 +445,7 @@ soon; it’s in production right now.</p>
 
 	
 
-	<div onclick="window.location.href='/blog/2014/05/03/only-48-hours-to-go-on-the-re-load-pro-kickstarter-slash/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2014/05/03/only-48-hours-to-go-on-the-re-load-pro-kickstarter-slash/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>3</p><p class='bottom-date'>May 2014</p>
 	   	</div>
@@ -466,7 +466,7 @@ soon; it’s in production right now.</p>
 
 	
 
-	<div onclick="window.location.href='/blog/2014/04/17/kickstarter-progress-update/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2014/04/17/kickstarter-progress-update/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>17</p><p class='bottom-date'>Apr 2014</p>
 	   	</div>
@@ -487,7 +487,7 @@ soon; it’s in production right now.</p>
 
 	
 
-	<div onclick="window.location.href='/blog/2014/04/15/custom-manufacturing-in-china/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2014/04/15/custom-manufacturing-in-china/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>15</p><p class='bottom-date'>Apr 2014</p>
 	   	</div>
@@ -544,7 +544,7 @@ soon; it’s in production right now.</p>
 
 	
 
-	<div onclick="window.location.href='/blog/2014/04/14/introducing-the-re-load-pro/'" class="mypost wow clearfix fadeInUp">
+	<div onclick="window.location.href='/blog/2014/04/14/introducing-the-re-load-pro/'" class="mypost wow clearfix ">
 	   	<div class="date">
 	   		<p class='date-top'>14</p><p class='bottom-date'>Apr 2014</p>
 	   	</div>
